# TO-Core

./: .gitignore  CMakeLists.txt  Makefile
lib/include/: globals.h  math.h  mathUtils.h  testSuite.h
lib/include/Error/: exceptions.h
lib/include/Network/: layer.h  sequentialNetwork.h
lib/include/Operations/: activation.h  advancedOperations.h  baseOperations.h  compare.h  convolution.h  integerTensorOperations.h  loss.h  mean.h  standardDeviation.h  statistics.h  tensorOperations.h  utils.h
lib/include/Tensor/: tensor.h
lib/include/Tests/: testNetwork.h  testTensorOperations.h  testUtil.h
lib/include/Tests/Integer/: testTensorOperations.h
lib/include/Utils/: list.h
lib/src/main/: globals.c  math.c  mathUtils.c
lib/src/main/Error/: exceptions.c
lib/src/main/Network/: layer.c  sequentialNetwork.c
lib/src/main/Operations/: activation.c  advancedOperations.c  baseOperations.c  baseTensorOperations.c  compare.c  convolution.c  loss.c  mean.c  standardDeviation.c  statistics.c  tensorOperations.c  utils.c
lib/src/main/Operations/Integer/: integerTensorOperations.c
lib/src/main/Tensor/: tensor.c
lib/src/main/Utils/: list.c
lib/src/tests/: TestSuite.c  testTensor.c  tests.c
lib/src/tests/functionality/Integer/: testConvolution.c  testLoss.c  testStatistics.c  testTensorOperations.c  testUtils.c
lib/src/tests/functionality/Network/: testNetwork.c
lib/src/tests/functionality/Utils/: testList.c
lib/src/tests/profile/Integer/: testConvolution.c  testTensorOperations.c
